# conformguard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  guarantee_scope.md  known_issues.md  real_world_validation.md  writing_scorers.md
examples/: ollama_live_demo.py  ollama_multi_check_demo.py  raw_loop_demo.py
src/conformguard/: __init__.py
src/conformguard/cli/: main.py
src/conformguard/core/: calibration.py  decision.py  engine.py  multi_check.py  quantile.py  scores.py
src/conformguard/integrations/: raw_tool_loop.py
src/conformguard/storage/: calibration_store.py
src/conformguard/validation/: coverage_check.py  multi_check_comparison.py  negative_control.py
tests/coverage_validation/: latest_multi_check_coverage_report.json  latest_multi_check_report.json  latest_real_data_report.json  latest_report.json  test_empirical_coverage.py  test_multi_check_comparison.py  test_multi_check_empirical_coverage.py  test_real_data_coverage.py
tests/coverage_validation/data/: README.md  bfcl_live_simple_extract.json
tests/coverage_validation/scenarios/: correlated_multi_check_scores.py  logprob_derived_scores.py  real_bfcl_calls.py  real_bfcl_multi_check_scores.py  skewed_confidence_scores.py  uniform_scores.py
tests/integration/: test_raw_tool_loop.py  test_wrap_end_to_end.py
tests/negative_controls/: latest_multi_check_negative_control_report.json  latest_report.json  test_exchangeability_violation_detected.py  test_multi_check_exchangeability_violation_detected.py
tests/unit/: test_calibration.py  test_calibration_store.py  test_cli.py  test_coverage_check.py  test_decision.py  test_engine.py  test_multi_check.py  test_negative_control.py  test_quantile.py  test_scores.py  test_version.py
