[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conformguard"
version = "0.2.1"
description = "Calibrated accept / abstain-and-escalate decisions for agent tool calls, backed by split conformal prediction's finite-sample coverage guarantee."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "conformguard contributors" },
]
keywords = [
    "conformal-prediction",
    "llm-agents",
    "tool-calling",
    "uncertainty-quantification",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/amir2628/conformguard"
Repository = "https://github.com/amir2628/conformguard"
Issues = "https://github.com/amir2628/conformguard/issues"
Documentation = "https://github.com/amir2628/conformguard/tree/main/docs"

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
conformguard = "conformguard.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/conformguard"]

[tool.pytest.ini_options]
markers = [
    "live: requires a real model provider API key, opt-in only",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
